# Prompt-Shield

./: .gitignore  Dockerfile  LICENSE  README.md  action.yml  benchmark_results.json  entrypoint.sh  pyproject.toml  requirements.txt  scorecard-report.md  slack-message.md
.github/workflows/: ci.yml  daily-repo-status.lock.yml  daily-repo-status.md  docs-sync.lock.yml  docs-sync.md  issue-triage.lock.yml  issue-triage.md  prompt-shield-scan.yml  release.yml  test-improvement.lock.yml  test-improvement.md
benchmarks/: __init__.py  performance_benchmark.py
docs/: ARCHITECTURE.md  DESIGN.md  EVALUATION_KIT.md  INTEGRATION.md  LANDING_PAGE.md  OUTREACH_TEMPLATES.md  PITCH_DECK.md  QUICKSTART.md
examples/: basic_usage.py  run_evaluation.py
integrations/: __init__.py  github_action.py  gitlab_webhook.py  simulate_github_event.py  test_integration.py
src/prompt_shield/: __init__.py  api.py  cli.py  config.py  patterns.py  pipeline.py  types.py
src/prompt_shield/enterprise/: __init__.py  admin_config.py  feature_flags.py  structured_logging.py
src/prompt_shield/evaluation/: __init__.py  evaluator.py  test_cases.py
src/prompt_shield/layers/: __init__.py  data_filter.py  detector.py  prompt_fence.py  trusted_filter.py
tests/: __init__.py  conftest.py  test_detector.py  test_pipeline.py
tests/e2e/: __init__.py  test_gitlab_scenarios.py  test_real_world_attacks.py
tests/integration/: __init__.py  test_layer_combinations.py  test_pipeline_integration.py
tests/unit/: __init__.py  test_cli.py  test_config.py  test_data_filter.py  test_injection_detector.py  test_patterns.py  test_prompt_fence.py  test_trusted_filter.py
